# moonpiercer

./: .gitattributes  .gitignore  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
analysis/: analysis.ipynb  methodology.ipynb  test.ipynb
hpc/: chip_worker.py  full_run_moonpiercer.sbatch  global_aggregation.py  manifest.py  mp_progress.sh  mp_resume.sbatch  mp_run.sbatch  mp_test.sbatch  progress.py  resume_moonpiercer.sbatch  run_moonpiercer.sbatch  setup_env.sh  test_moonpiercer.sbatch
moonpiercer/: __init__.py  config.py  constants.py  detection.py  freshness.py  geometry.py  io_utils.py  null_model.py  pairing.py  plotting.py  velocity.py  wms.py
notebooks/: analysis.ipynb
tests/: test_detection.py  test_freshness.py  test_geometry.py  test_null_model.py  test_pairing.py  test_velocity.py
